# dnsproof

./: .gitignore  DNSProof-system-overview.txt  README.md  TODO.txt  bootstrap_vm_portable copy.sh  bootstrap_vm_portable.sh  copy-agent.py-to-vm.txt  dns_config.yaml  dns_management_stackdns_as_reference.py  dnsproof.db  filestructure.txt  gcp_vm_script.sh  instructions.sh  push-dnsagent.sh  pyproject.toml  test-backend-with-requests.sh
app/: config.py  main.py  requirements.txt
app/json/: dnsproof.org.json  dnsproof.org_backup.json
app/models/: models.py
app/routes/: dns.py  dns_management.py  dnssec.py  dnssec_app.py  dnssec_management.py  logs.py  ns_management.py  signing_management.py
app/utils/: agents.py  attestation.py  cryptographic_signing.py  db.py  dns.py  dnssec_logging.py  middlewares.py  zone_json.py
cli/: README.md  dnp.py  dnp_backup.py  dnp_backup2.py
dnsproof/: agent.py  auth.py  config.py  dns_routes.py  dnssec.py  dnssec_resign_cron.py  zone_manager.py
docker-nix/: .env.example  Makefile  README.md  docker-compose.yml  flake.nix
docs/: cli.md  deterministic_zone_reconstruction.md  log_integrity.md
examples/: README.md  canonical_snapshot_demo.py  demo_logs.json  dns_config.yaml  dnsproof.org.json  verify_log_offline.py
experiments/: README.md  merkle_log.py  verify_merkle_dns.py
json/: dnsproof.org copy.json  dnsproof.org.json
jupyter-notebooks/: create-local-key.ipynb  generate-record-id.ipynb  test-hmac.ipynb  test-ns-verify.ipynb
tls_cert/: agent.crt
